assets/css/style.css
/* General Styling */
.main-bg {
    background-color: #fbf9f6;
}

.body-height-85 {
    height: 85vh;
}

/* Font Styling */
.bbc-font {
    font-family: 'Merriweather', serif;
}

.bbc-fw {
    font-weight: 700;
}

/* Navbar Styling */
.navbar-brand {
    font-weight: 700;
    font-size: calc(20px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
}

.hero {
    background-image: url("/assets/images/hero.jpeg");
    background-size: cover;
    min-height: 500px;
    /* filter: blur(10px); */
}

.hero h1 {
    backdrop-filter: blur(10px);
}


/* Footer */
footer {
    max-height: 100px;
}

@media screen and (min-width: 1024px) {}

